      cookie has expired.
    - Better mod_webauth logging when the user's app cookie has expired.
    - Stop logging the binary app token in mod_webauth.
    - Fix some obscure error handling cases caught by clang --analyze.
  * Use the new -q flag to a2query when probing for whether mod_webauth
    or mod_webauthldap are enabled, and depend on the appropriate version
    of apache2.

 -- Russ Allbery <rra@debian.org>  Tue, 12 Mar 2013 17:43:54 -0700

webauth (4.4.2-1) experimental; urgency=low

  * New upstream release.
    - Fix an occasional WebKDC crash when determining if an authentication
      is interactive.  Should fix FTBFS on powerpc.
    - Add additional Autoconf checks to hopefully build on Hurd.

 -- Russ Allbery <rra@debian.org>  Tue, 05 Feb 2013 13:50:16 -0800

webauth (4.4.1-1) experimental; urgency=low

  * New upstream release.
    - New authenticate callback supported in WebLogin configuration.
    - WebLogin should now run more efficiently under FastCGI.

 -- Russ Allbery <rra@debian.org>  Thu, 31 Jan 2013 19:18:00 -0800

webauth (4.4.0-1) experimental; urgency=low

  * New upstream release.
    - New authorization identity support in all components of WebAuth.
    - New WebKdcLoginTimeLimit directive for mod_webkdc to control the
      time limit for multistage login and when a recent login no longer
      counts towards session factors.
    - WebAuthForceLogin no longer forces re-authentication if the last
      authentication was within WebKdcLoginTimeLimit.
    - WebLogin now optionally supports replay detection and rate limiting
      of failed login attempts.  This support requires a memcached server
      to store the relevant data.
    - The WebLogin error template now takes two new parameters for errors
      related to replays and rate limiting.
    - Set single sign-on cookies in WebLogin if appropriate even when
      displaying an error.  This fixes looping issues with site