@@ -2,7 +2,7 @@ Source: webauth
 Section: web
 Priority: optional
 Maintainer: Russ Allbery <rra@debian.org>
-Build-Depends: debhelper (>= 9), apache2-dev (>> 2.4.1), dh-autoreconf,
+Build-Depends: debhelper (>= 9), apache2-dev (>> 2.4.4), dh-autoreconf,
  libapr1-dev, libaprutil1-dev, libcgi-application-perl,
  libcgi-application-perl (>= 4.50) |
  libcgi-application-basic-plugin-bundle-perl,
